# cis497

./: .gitignore  README.md
admm-elastic/: CMakeLists.txt
admm-elastic/cis497/: CMakeLists.txt  rotate.cpp  rotate_lower_down.cpp  testing.cpp  testing2.cpp  testing2_old.cpp  testing3.cpp  testing3_old.cpp  testing_old.cpp  translate_down.cpp  translate_lower_down.cpp  translate_up.cpp
admm-elastic/cis497/data/: head_old.node  head_reduced.ele  head_reduced2.ele  head_reduced2.node  lower_teeth_old.ele  lower_teeth_old.node  lower_teeth_reduced.ele  upper_teeth_old.ele  upper_teeth_old.node  upper_teeth_reduced.node
admm-elastic/cis497/utils/: .Application.hpp.swp  Application.hpp
admm-elastic/samples/data/: head_old.ele  head_reduced.node  lower_teeth_reduced.node  upper_teeth_reduced.ele
admm-elastic/samples/sca2016/: CMakeLists.txt  bloop.cpp
admm-elastic/samples/tvcg2017/: torus.cpp
admm-elastic/src/: Collider.hpp  PassiveObject.hpp  TriEnergyTerm.hpp
